fix the image overlap

--- a/front-end/src/css/App.css
+++ b/front-end/src/css/App.css
@@ -2,11 +2,6 @@
   margin-top: 50px;
 }
 
-p {
-  margin-top: 0;
-  padding: 0;
-}
-
 .text a {
   color: white;
 }
